fix(prejoin) fix prejoin app dialogs not being visible (#12689)

--- a/css/premeeting/_prejoin-third-party.scss
+++ b/css/premeeting/_prejoin-third-party.scss
@@ -2,7 +2,8 @@ $sidePanelWidth: 300px;
 
 .prejoin-third-party {
   flex-direction: column-reverse;
-  
+  z-index: auto;
+
   .content {
       height: auto;
       margin: 0 auto;
